active hojao active

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ github  apikey  password</code></pre>
             <div id="ubuntu" class="tab-content active">
                 <h3>Install on Ubuntu/Debian</h3>
                 <p>Download the latest .deb package and install:</p>
-                <pre><code>wget https://github.com/f3rix-xyz/rix/releases/download/v1.0.0/rix-package.deb
+                <pre><code>wget https://github.com/f3rix-xyz/rix/rix-package.deb
 sudo dpkg -i rix-package.deb</code></pre>
                 
                 <p>Or build from source:</p>
